fix: selected text background color in dark mode.

--- a/src/_misty-dark-base.scss
+++ b/src/_misty-dark-base.scss
@@ -18,6 +18,8 @@ https://github.com/etigerstudio/typora-misty-theme
     --text-color: #8B97A3;
     --active-toggle-btn-color: #53575C;
     --rawblock-edit-panel-bd: #3A3C3D;
+    --select-text-bg-color: hsl(220, 15%, 30%);
+}
 }
 
 html {
